<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/mainDrawable_text" />

        <item
            android:id="@+id/nav_money"
            android:icon="@mipmap/ic_currency_usd"
            android:title="@string/valutaDrawable_text" />

    </group>

    <item android:title="@string/otherDrawable_text">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/shareDrawable_text" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_alert_circle_outline"
                android:title="@string/aboutAppDrawable_text" />
        </menu>
    </item>

</menu>
